--- a/templates/searchdisease.html
+++ b/templates/searchdisease.html
@@ -39,85 +39,105 @@ h4 {
                           <div class="col-12">
                             <table class="table table-bordered">
                               <thead>
-                            <h4 class="subtit mb-2" >Select the symptoms you have: </h4>
+                            <h4 class="subtit mb-2" >Select one of the major symptom you have: </h4>
                               </thead>
                               <tbody>
                                 <tr>
                                   <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                        <label class="custom-control-label" for="customCheck1">Chest tightness</label>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom1" value="option1">
+                                      <label class="form-check-label" for="symptom1">
+                                        Abdominal Pain
+                                      </label>
                                     </div>
                                   </td>
 
                                   <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck2">
-                                        <label class="custom-control-label" for="customCheck2">Cough</label>
-                                    </div>
-                                  </td>
-
-                                </tr>
-                                <tr>
-                                  <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck3">
-                                        <label class="custom-control-label" for="customCheck3">Distress respiratory</label>
-                                    </div>
-                                  </td>
-
-                                  <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck4">
-                                        <label class="custom-control-label" for="customCheck4">Non-productive cough </label>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom2" value="option2">
+                                      <label class="form-check-label" for="symptom2">
+                                          Cough
+                                      </label>
                                     </div>
                                   </td>
 
                                 </tr>
                                 <tr>
                                   <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck5">
-                                        <label class="custom-control-label" for="customCheck5">Pleuritic pain</label>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom3" value="option3">
+                                      <label class="form-check-label" for="symptom3">
+                                          Distress respiratory
+                                      </label>
                                     </div>
                                   </td>
 
                                   <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck6">
-                                        <label class="custom-control-label" for="customCheck6">Productive cough</label>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom4" value="option4">
+                                      <label class="form-check-label" for="symptom4">
+                                          Non-productive cough
+                                      </label>
+                                    </div>
+                                  </td>
+
+                                </tr>
+                                <tr>
+                                  <td>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom5" value="option5">
+                                      <label class="form-check-label" for="symptom5">
+                                          Pleuritic pain
+                                      </label>
+                                    </div>
+                                  </td>
+
+                                  <td>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom6" value="option6">
+                                      <label class="form-check-label" for="symptom6">
+                                          Productive cough
+                                      </label>
                                     </div>
                                   </td>
 
                                 </tr>
                               <tr>
                                   <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck7">
-                                        <label class="custom-control-label" for="customCheck7">Shortness of breath</label>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom7" value="option7">
+                                      <label class="form-check-label" for="symptom7">
+                                          Vomiting
+                                      </label>
                                     </div>
                                   </td>
 
                                   <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck8">
-                                        <label class="custom-control-label" for="customCheck8">Symptom aggravating factors</label>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom8" value="option8">
+                                      <label class="form-check-label" for="symptom8">
+                                          Short breath
+                                      </label>
                                     </div>
                                   </td>
 
                                 </tr>
                                <tr>
                                   <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck9">
-                                        <label class="custom-control-label" for="customCheck9">Wheezing</label>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom9" value="option9">
+                                      <label class="form-check-label" for="symptom9">
+                                          Wheezing
+                                      </label>
                                     </div>
                                   </td>
 
                                   <td>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck10">
-                                        <label class="custom-control-label" for="customCheck10">Fever</label>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" name="exampleRadios" id="symptom10" value="option10">
+                                      <label class="form-check-label" for="symptom10">
+                                          Fever
+                                      </label>
                                     </div>
                                   </td>
 
