--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 <!-----------NAVBAR section------->
         <section id="nav-bar">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="index.html"><img src = "{% static 'images/logooo.png' %}" alt="image" /> </a>
+                <a class="navbar-brand" href="{% url 'home' %}"><img src = "{% static 'images/logooo.png' %}" alt="image" /> </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <i class="fa fa-bars"></i>
                 </button>
@@ -31,7 +31,7 @@
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                       {% if user.is_authenticated %}
-                      <a class="nav-link" href="/index">HOME </a>
+                      <a class="nav-link" href="{% url 'home' %}">HOME </a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="{% url 'disease' %}">SEARCH DISEASE</a>
@@ -50,7 +50,7 @@
                     </li>
                       {%else%}
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">HOME </a>
+                        <a class="nav-link" href="{% url 'home' %}">HOME </a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#about-us">ABOUT US</a>
