--- a/disease/templates/disease/checkdisease.html
+++ b/disease/templates/disease/checkdisease.html
@@ -1,25 +1,183 @@
-
-
 {% extends "basic.html" %}
 {% load static %}
 
- 
-    {% block head %}
+{% block body %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'patient/checkdisease/dps.css' %}">   
- 
+<style>
+    #predict{
+    position: static;
+    width: 100px;
+    padding: 5px;
+    text-align: center;
+
+}
+
+#predicted-data{
+  margin-top: 5% !important;
+  width: 40%;
+  background:rgba(3, 169, 244, 0.48);
+  padding: 10px;
+  font-size: 16px;
+  text-align: center;
+  text-shadow: -5px 5px 6px white;
+  box-shadow: 3px 1px 3px 0px #607D8B;
+  display:inline-block;
+
+}
 
 
-<script>
+
+#inputsym{
+
+   position: fixed;
+   right: 100px;
+}
+
+.symptoms{
+  border:ridge rgb(150, 177, 199);
+  margin: 2px;
+  display: block ;
+  text-align: center;
+  padding: 0px !important;
+
+  background-color: #fdffff;
+  text-shadow: 0px 1px 20px rgba(3, 169, 244, 0.78);
+  box-shadow: 0px 8px 16px 0px rgba(78, 191, 243, 0.05);
+
+}
+
+#symptoms-box{
+position: static;
+margin-top: 5%;
+margin-left: 20%;
+margin-right: 20%;
+text-align: center;
+
+background-color: #e9ecef !important;
+min-height: 300px;
+
+padding: 10px 10px 10px 10px;
+
+}
+
+.card-body{
+  margin-left: auto ;
+  margin-right: auto ;
+
+
+}
+/*  ------------------------------------------------------------*/
+/* Dropdown Button */
+ .dropbtn {
+    position: relative;
+    left:50%;
+    width: 150px;
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    left:40%;
+
+  }
+  #container-dropdown{
+
+
+    min-width: 1130px;
+    min-height: 200px;
+  }
+
+  /* Dropdown Content (Hidden by Default) */
+  .drop-content {
+    left:10%;
+    right: 10%;
+    display: none;
+    background-color: #fdffff;
+
+    text-shadow: 0px 1px 20px rgb(7, 97, 231);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+
+  }
+
+
+.dropdown-item {
+  position: relative;
+  min-width: 100px ;
+  text-align: center !important;
+  width: auto !important;
+  display:inline-block ;
+  cursor: pointer;
+
+  clear: both;
+  text-align: center;
+  border: 0;
+
+  margin: 10px !important;
+
+  background-color: #fdffff;
+  text-shadow: 0px 1px 20px rgba(3, 169, 244, 0.78);
+  box-shadow: 0px 8px 16px 0px rgba(3, 169, 244, 0.05);
+
+  line-height: 2;
+  padding: 4px !important;
+
+}
+
+  /* Links inside the dropdown
+  .dropdown-content a {
+
+  }*/
+
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: rgb(90, 181, 241);
+  }
+
+
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container
+   when the user clicks on the dropdown button) */
+  .show {display:inline-block;}
+
+
+  #searchbar{
+    margin-left: 25%;
+    padding:10px;
+    border-radius: 10px;
+
+    width: 30%;
+}
+
+  #searchbardiv{
+    padding:10px;
+
+  }
+</style>
+
+
+
+
+
+  <script>
 
   /* When the user clicks on the button,
 toggle between hiding and showing the dropdown content */
 function Functionshow() {
-  
+
   document.getElementById("searchbar").value = '';
   document.getElementById("myDropdown").classList.toggle("show");
    search_symptoms();
-  
+
 }
 
 
@@ -32,7 +190,7 @@ window.onclick = function(event) {
     var dropdowns = document.getElementsByClassName("drop-content");
     var i;
     for (i = 0; i < dropdowns.length; i++) {
-      
+
       var openDropdown = dropdowns[i];
       if (openDropdown.classList.contains('show')) {
         openDropdown.classList.remove('show');
@@ -47,30 +205,30 @@ window.onclick = function(event) {
     var newItem = document.createElement("TEXTAREA");
     newItem.innerText = name;
     newItem.setAttribute("id","symptoms");
-    
+
     newItem.setAttribute("class","symptoms");
     document.getElementById("sympbox").appendChild(newItem);
-    
+
   }
 
- 
+
   //var elements = document.getElementsByClassName("symptoms");
 
 
-  function search_symptoms() { 
-    let input = document.getElementById('searchbar').value 
-    input=input.toLowerCase(); 
-    let x = document.getElementsByClassName('dropdown-item'); 
-      
-    for (i = 0; i < x.length; i++) {  
-        if (!x[i].innerHTML.toLowerCase().includes(input)) { 
-            x[i].style.display="none"; 
-        } 
-        else { 
-            x[i].style.display="inline-block";                  
-        } 
-    } 
-} 
+  function search_symptoms() {
+    let input = document.getElementById('searchbar').value
+    input=input.toLowerCase();
+    let x = document.getElementsByClassName('dropdown-item');
+
+    for (i = 0; i < x.length; i++) {
+        if (!x[i].innerHTML.toLowerCase().includes(input)) {
+            x[i].style.display="none";
+        }
+        else {
+            x[i].style.display="inline-block";
+        }
+    }
+}
 
 
 $(document).ready( function(){
@@ -92,14 +250,14 @@ $("#predict").click(function () {
   for(i=0;i<symptoms.length;i++){
     symlist[i]=symptoms[i].value;
   }
-  
+
 
 
   $("#resultdiv").show("slow");
   $('html,body').animate({
     scrollTop: $("#resultdiv").offset().top},
     'slow');
-       
+
 
 
 
@@ -124,11 +282,11 @@ $("#predict").click(function () {
 
         $("#href").attr("href","https://www.google.com/search?q="+ disease +"");
 
-        
+
         document.getElementById('consultdoctor').innerText = data["consultdoctor"];
 
       }
-      
+
     });
 
   }
@@ -139,43 +297,7 @@ $("#predict").click(function () {
 
 });
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</script>
-
-
-
-{% endblock %}
-
-
-
-
-
-
-
-
-
-{% block body %}
-
-
-
-
-
-<div class="container">
-      <!-- 
+</script>    <!--
   
   <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -281,20 +403,15 @@ $("#predict").click(function () {
 
                     </div>
               </div>
+      <br> <br>
 
-        <div class="text-center mt-4 mb-4"> 
-              <button class="btn btn-outline-success">
-                    <a id="href" href="https://www.google.com/search?q=anuj" target="_blank" rel="noopener noreferrer">Click here to know more about &nbsp 
-                    <span id="diseasesearch" style="color: crimson;"></span></a>
-              </button>
-        </div>
-          <br><br>
-
-        <div class="text-center">
-          <h4>This tool does not provide medical advice. It is intended for informational purposes only.
-          </h4><h4>It is not a substitute for professional medical advice, diagnosis or treatment. 
-          </h4>
-        <br><br>
+<!--        <div class="text-center mt-4 mb-4"> -->
+<!--              <button class="btn btn-outline-success">-->
+<!--                    <a id="href" href="https://www.github.com/Sushmi-pal/final" target="_blank" rel="noopener noreferrer">Click here to know more about &nbsp -->
+<!--                    <span id="diseasesearch" style="color: crimson;"></span></a>-->
+<!--              </button>-->
+<!--        </div>-->
+<!--          <br><br>-->
 
         </div>
 
@@ -305,7 +422,8 @@ $("#predict").click(function () {
         <div >  <form action="consult_a_doctor" method="GET">
             {% csrf_token %} 
             <button id="consultbtn" type="submit" class="btn btn-primary"> Consult a <span id="consultdoctor"  name="consultdoctor" > </span> doctor</button>
-          </form>
+        <br><br>
+        </form>
         </div>
       
  
