--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                       <a class="nav-link" href="{% url 'home' %}">HOME </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'disease' %}">SEARCH DISEASE</a>
+                      <a class="nav-link" href="{% url 'checkdisease' %}">SEARCH DISEASE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/specialist">SEARCH DOCTORS</a>
