--- a/disease/templates/disease/checkdisease.html
+++ b/disease/templates/disease/checkdisease.html
@@ -419,7 +419,7 @@ $("#predict").click(function () {
 <div class="mx-auto text-center " style="width:350px">
   
      
-        <div >  <form action=/specialist" method="GET">
+        <div >  <form action="/specialist" method="GET">
             {% csrf_token %} 
             <button id="consultbtn" type="submit" class="btn btn-primary"> Consult a <span id="consultdoctor"  name="consultdoctor" > </span> doctor</button>
         <br><br>
