Doctor's profile page

--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -63,6 +63,12 @@
 {% endblock %}
 {% block body %}
 {% load static %}
+
+<form method="get" action="/specialist/search" class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" name="query" id="query" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+
+    </form>
 <section id="doctors">
   <div class="container text-center">
     <h1 class="title text-center">The Specialists</h1>
