--- a/disease/templates/disease/checkdisease.html
+++ b/disease/templates/disease/checkdisease.html
@@ -391,7 +391,7 @@ $("#predict").click(function () {
 <!--                            <span class="diseasefield" >Patient name : {{ user.patient.name }}</span>-->
 <!--                            <span class="diseasefield" >&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Age : {{ user.patient.age }} </span>-->
 <!--                    </div>-->
-                    <span class="diseasefield" >predicted disease is : </span><span class="diseasefield" id="diseasefield" style="color: #092700; text-shadow: 2px 2px 4px rgb(36, 255, 45);"></span> <br>
+                    <span class="diseasefield" >predicted disease is : {{response.Prediction}}</span><span class="diseasefield" id="diseasefield" style="color: #092700; text-shadow: 2px 2px 4px rgb(36, 255, 45);"></span> <br>
                     <br>
                     <span class="diseasefield">confidence score of :  </span>
                     <span>
@@ -425,8 +425,8 @@ $("#predict").click(function () {
         <br><br>
         </form>
         </div>
-      
- 
+
+
 </div>
 
          
