--- a/disease/templates/disease/checkdisease.html
+++ b/disease/templates/disease/checkdisease.html
@@ -376,7 +376,7 @@ $("#predict").click(function () {
                     </div>
                           <br>
                           <div class="card-footer">
-                                <button id="predict" class="btn btn-success">Predict</button>
+                                <a href="/predict" id="predict" class="btn btn-success">Predict</a>
                           </div>
              </div>
         </div>
