--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -62,6 +62,7 @@
         <button class= "btn btn-outline-info" type="submit">
           Login
         </button>
+      <p class="forgot"><a href="{% url 'register' %}">Not registered? </a> </p>
       <p class="forgot"><a href="{% url 'password_reset' %}">Forgot Password? </a> </p>
     </form>
   </div>
