--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,11 @@
                         <p>Cardiologist</p>
                     </div>
                 </div>
-                <a href="/specialist/">   <button type="button" class="btn btn-primary">All available doctors </button></a>
+                {% if request.user.is_authenticated %}
+                    <a href="/specialist/">   <button type="button" class="btn btn-primary">All available doctors </button></a>
+                {% else %}
+                    <a href="/login">   <button type="button" class="btn btn-primary">All available doctors </button></a>
+                {% endif %}
             </div>
         </section>
 <!-----------------Testimonials section--------->
