--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,24 @@
     </head>
     <body>
 <!-----------NAVBAR section------->
+    <style>
+        .nav-item a:hover{
+            border-bottom: 2px dotted #39b49b;
+            transform: scale(0.95);
+        }
+        .nav-item a.active {
+            background: #39b49b;
+            box-shadow: 5px 5px 0 0px #fff;
+        }
+        .mastfoot {
+            background-color: #157fda;
+            padding: 10px;
+        }
+        .footer-text{
+            color: #ffffff;
+            letter-spacing: 2.7;
+        }
+    </style>
         <section id="nav-bar">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="{% url 'home' %}"><img src = "{% static 'images/logooo.png' %}" alt="image" /> </a>
@@ -65,10 +83,10 @@
                       <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#user-profile">ACCOUNT</a>
+                        <a class="nav-link" href="#social-media">CONTACT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#social-media">CONTACT</a>
+                      <a class="nav-link active" href="#user-profile">GET STARTED</a>
                     </li>
                       {%endif%}
                   </ul>
@@ -207,9 +225,7 @@
         </section>
 <!----------------------Footer section--------------->
 <footer class="mastfoot mt-auto text-center">
-  <div class="inner">
-    <p>© Disease Predictor and Specialist Recommender.</p>
-  </div>
+            <p class="footer-text">© Disease Predictor and Specialist Recommender.</p>
 </footer>
     </body>
 </html>
