--- a/templates/basic.html
+++ b/templates/basic.html
@@ -32,6 +32,9 @@
                     <a class="nav-link" href="{% url 'feedback' %}">FEEDBACK</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'bookappointment' %}">APPOINTMENT</a>
+                    </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/profile">PROFILE</a>
                 </li>
                 <li class="nav-item">
