--- a/specialist/templates/specialist/doctor_register.html
+++ b/specialist/templates/specialist/doctor_register.html
@@ -86,7 +86,7 @@
         .main1 {
             background-color: #FFFFFF;
             width: 700px;
-            height: 1300px;
+            height: 1450px;
             margin: 4em auto;
             border-radius: 1.5em;
             box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
@@ -130,7 +130,7 @@
         }
     </style>
       <div class="main1">
-        <p class="sign" align="center">Sign Up</p>
+        <p class="sign" align="center">Sign Up As Doctor</p>
         <form class="form1"  method="POST" enctype="multipart/form-data">
           {%csrf_token%}
         {{ form | crispy }}
