--- a/templates/account.html
+++ b/templates/account.html
@@ -1,17 +1,26 @@
 {% extends 'basic.html' %}
 {% block body %}
 {% load static %}
-<div id="user-profile">
-  <div class="container text-center">
-    <h1 class="title">MEMBERSHIP DETAILS</h1>
-      <div class="account text-center">
-        <h4>New Member?</h4>
-        <button type="button" class="btn btn-primary"><a href="/users/register"><font color="white"> Register Here</font></a></button>
-      </div>
-      <div class="account text-center">
-        <h4>Already A Member?</h4>
-        <button type="button" class="btn btn-primary"><a href="/users/login"><font color="white">Login Here</font></a></button></div>
-      </div>
-  </div>
-</section>
+<section id="user-profile" class="py-1">
+            {% if user.is_authenticated %}
+            <br>
+            {% else %}
+            <div class="container text-center">
+                <h1 class="title">Sign In As</h1>
+                <div class="row mt-3">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-4">
+                        <a href="/users/patientlogin/">
+                          <img  alt="patient" src="{% static 'images/patient.png' %}"  class="img">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="/users/doctorlogin/">
+                          <img  alt="doctor" src="{% static 'images/doctor.png' %}"  class="img">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+        </section>
 {% endblock %}
