--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,25 @@
         {% endfor%}
         {% endif %}
 
-
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script src="https://kit.fontawesome.com/0268f71e2c.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="fonts/stylesheet.css">
     </head>
     <body>
 <!-----------NAVBAR section------->
  <style>
+         body,html{
+            overflow-x: hidden;
+         }
+         #nav-bar{
+             position: fixed;
+             top: 0;
+             width: 100%;
+         }
         .nav-item a:hover{
             border-bottom: 2px dotted #39b49b;
             transform: scale(0.95);
@@ -45,23 +53,33 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <i class="fa fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                      {% if user.is_authenticated %}
+                      {% if user.is_authenticated and user.is_patient %}
                       <a class="nav-link" href="{% url 'home' %}">HOME </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'checkdisease' %}">SEARCH DISEASE</a>
+                      <a class="nav-link" href="{% url 'checkdisease' %}">DISEASE</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/specialist">SEARCH DOCTORS</a>
+                        <a class="nav-link" href="/specialist">DOCTORS</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="{% url 'feedback' %}">FEEDBACK</a>
                     </li>
+                      <li class="nav-item">
+                    <a class="nav-link" href="{% url 'bookappointment' %}">APPOINTMENT</a>
+                    </li>
                     <li class="nav-item">
                       <a class="nav-link" href="/profile">PROFILE</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/logout">LOGOUT {{user.username}}</a>
+                    </li>
+                      {% elif user.is_authenticated and user.is_doctor %}
+                      <li class="nav-item">
+                      <a class="nav-link" href="/dprofile">PROFILE</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="/logout">LOGOUT {{user.username}}</a>
@@ -91,6 +109,7 @@
                       {%endif%}
                   </ul>
                 </div>
+
             </nav>
         </section>
 <!------------------Banner section-------->
@@ -174,7 +193,7 @@
                 {% if request.user.is_authenticated %}
                     <a href="/specialist/">   <button type="button" class="btn btn-primary">All available doctors </button></a>
                 {% else %}
-                    <a href="/login">   <button type="button" class="btn btn-primary">All available doctors </button></a>
+                    <a href="/account">   <button type="button" class="btn btn-primary">All available doctors </button></a>
                 {% endif %}
             </div>
         </section>
@@ -183,42 +202,56 @@
             <div class="container testi">
                 <h1 class="title text-center">WHAT OUR USERS SAY?</h1>
                 <div class="row offset-1">
+                    {% for i in c %}
                     <div class="col-md-5 testimonials">
-                        <p>Thanks for your easy and friendly webpage. It led us to predict my symptoms at an early stage.</p>
-                        <img src = "{% static 'images/testi_01.png' %}" />
-                        <p class="user-details"><b>Bishal Adhikari</b><br>Manager of Racer</p>
+                        <p>{{i.message}}</p>
+                        <p class="user-details"><b>-{{i.name}}</b></p>
                     </div>
-                    <div class="col-md-5 testimonials">
-                        <p>Thankyou for the detailed appointment information of doctors, it helped me reach on time.</p>
-                        <img src = "{% static 'images/testi_02.png' %}" />
-                        <p class="user-details"><b>Susan Shrestha</b><br>Worker at XYZ ltd.</p>
-                    </div>
+                    {% endfor %}
+
                 </div>
             </div>
         </section>
 <!-------------------Account section----------------->
-        <section id="user-profile" class="py-5">
+        <style>
+            .img{
+                width:  240px;
+                height: 240px;
+            }
+        </style>
+        <section id="user-profile" class="py-1">
             {% if user.is_authenticated %}
             <br>
             {% else %}
             <div class="container text-center">
-                <h1 class="title">MEMBERSHIP DETAILS</h1>
-                <div class="account text-center">
-                    <h4>New Member?</h4>
-                    <button type="button" class="btn btn-primary"><a href="/users/patr"><font color="white"> Register As Patient</font></a></button>
-                    <button type="button" class="btn btn-primary"><a href="/users/docr"><font color="white"> Register As Doctor</font></a></button>
+                <h1 class="title">Sign In As</h1>
+                <div class="row mt-3">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-4">
+                        <a href="/users/patientlogin/">
+                          <img  alt="patient" src="{% static 'images/patient.png' %}"  class="img">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="/users/doctorlogin/">
+                          <img  alt="doctor" src="{% static 'images/doctor.png' %}"  class="img">
+                        </a>
+                    </div>
                 </div>
-                    <h4>Already A Member?</h4>
-                <button type="button" class="btn btn-primary"><a href="/users/patientlogin/"><font color="white"> Login As Patient</font></a></button>
-                <button type="button" class="btn btn-primary"><a href="/users/doctorlogin/"><font color="white"> Login As Doctor</font></a></button>
             </div>
             {% endif %}
         </section>
  <!--------------------Contact section--------------->
-        <section id="social-media" class="py-5">
+        <style>
+            .social-icons img{
+                width: 150px;
+                height: 150px;
+            }
+        </style>
+        <section id="social-media" class="py-3">
             <div class="container text-center">
                 <p class="title">FIND US ON SOCIAL MEDIA</p>
-                <div class="social-icons">
+                <div class="social-icons mb-4">
                   <a href="https://www.facebook.com/"><img src = "{% static 'images/fb-logo(1).png' %}" /></a>
                   <a href="https://www.instagram.com/"><img src = "{% static 'images/fb-logo(2).png' %}" /></a>
                   <a href="https://www.twitter.com/"><img src = "{% static 'images/fb-logo(4).png' %}" /></a>
@@ -226,7 +259,7 @@
             </div>
         </section>
 <!----------------------Footer section--------------->
-<footer class="mastfoot mt-auto text-center">
+<footer class="mastfoot mt-auto text-center py-2">
     <p class="footer-text">© Disease Predictor and Specialist Recommender.</p>
 </footer>
     </body>
