--- a/users/templates/users/doctorlogin.html
+++ b/users/templates/users/doctorlogin.html
@@ -12,6 +12,11 @@
 </head>
 <body>
     <style>
+        body{
+            background-image: url('/static/images/service-bg.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
         .main {
             background-color: #FFFFFF;
             width: 600px;
@@ -54,7 +59,7 @@
         }
     </style>
   <div class="main">
-    <p class="sign" align="center">Sign In</p>
+    <p class="sign" align="center">Sign In As Doctor</p>
     <form class="form1" method="POST">
       {% csrf_token %}
 
