--- a/users/templates/users/doctorprofile.html
+++ b/users/templates/users/doctorprofile.html
@@ -23,25 +23,17 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
+
+                         {% if user.is_authenticated and user.is_doctor %}
                     <li class="nav-item">
-                         {% if user.is_authenticated %}
                       <a class="nav-link" href="{% url 'home' %}">HOME </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'checkdisease' %}">SEARCH DISEASE</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/specialist">SEARCH DOCTORS</a>
+                      <a class="nav-link" href="/dprofile">PROFILE</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{% url 'feedback' %}">FEEDBACK</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/profile">PROFILE</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/logout">LOGOUT{{user.username}}</a>
+                      <a class="nav-link" href="/logout">LOGOUT DR.{{user.username}}</a>
                     </li>
                       {%else%}
                     <li class="nav-item">
@@ -70,76 +62,137 @@
                 </div>
             </nav>
            </section>
-           <style>
-                body{
+<style>
+               .profile-container .profile-header .profile-info {
+                min-height: 175px;
+                border-right: 1px solid #eee;
+                padding: 15px 40px 35px 0;
+           }
+           .profile-container .profile-header .header-avatar {
+                width: 125px;
+                height: 125px;
+                -webkit-border-radius: 50%;
+                -webkit-background-clip: padding-box;
+                border-radius: 50%;
+                background-clip: padding-box;
+                border: 5px solid #0060b1;
+                box-shadow: 0 0 10px rgba(0,0,0,.15);
+                margin: 25px auto;
+                background-color: #fbfbfb;
+           }
+           .profile-container .profile-header {
+                min-height: 175px;
+                margin: 15px 15px 0;
+                box-shadow: 0 1px 2px rgba(0,0,0);
+           }
+           body{
                   background: #FFFFFF;
-                }
-                label{
-                    font-size: 18px;
-                    font-weight: 600;
-                }
-                input{
-                    margin-bottom: 0.5rem;
-                    padding: 0px 6px;
-                    width: 30%;
-                    height: 32px;
-                }
-
-               .updatebutton{
-                  background: linear-gradient(to right,#2895f1,#0060b1);
-                  color: white;
+           }
+           h6{
                   font-weight: 600;
-                  border-radius: 0.6em;
-                  border: none;
-                  padding: 10px 40px;
-                  font-size: 20px;
-                  margin-bottom: 20px;
-                  margin-left: 8px;
-                  text-decoration: none;
-                  outline: none !important;
-               }
-               #updatebutton:hover{
-                      font-size: 21px;
-               }
-               .media{
-               align-items: center;
-               }
-               .account-img{
-                      outline: #0060b1;
-               }
-               .media-body{
-                      display: inline-block;
-                      margin: 30px 0px 0px 28px;
-               }
+           }
            </style>
            <div class="container">
                <h1 class="title text-center">Personal Information</h1>
-                        <div class="row">
-                          <div class="col-12">
-                            <div class="media mb-4">
-                                <img class="rounded-circle account-img" src= "{% static 'images/d_pics/20161004_150054.jpg' %}" height="156px" width="156px">
-                                <div class="media-body mb-4">
-                                    <h2 class="account-heading">{{ user.username }}</h2>
-                                    <p class="text-secondary">{{user.email}}</p>
+               <div class="col-md-12">
+                <div class="profile-container mb-5">
+                    <div class="profile-header row">
+                        <div class="col-md-4 col-sm-12 text-center mt-5">
+                            <img src="/images/{{user.doctor.identification_image}}" alt="doctor-profilepicture" class="header-avatar">
+                            <div class="mt-1">
+                                <h4>{{user.doctor.name}}</h4>
+                                <p class="text-secondary mb-1">{{user.doctor.qualification}}</p>
+                                <p class="text-muted font-size-sm">{{user.doctor.speciality}} </p>
+                            </div>
+                        </div>
+                        <div class="col-md-8 col-sm-12 profile-info">
+                            <div class="header-information ml-3">
+                                <div class="row mt-2">
+                                    <div class="col-sm-3">
+                                      <h6 class="mb-0">Full Name</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                      {{user.doctor.name}}
+                                    </div>
+                                  </div>
+                                  <hr>
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                      <h6 class="mb-0">Email</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                      {{user.email}}
+                                    </div>
+                                  </div>
+                                  <hr>
+                                  <div class="row">
+                                    <div class="col-sm-3">
+                                      <h6 class="mb-0">Description</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                      {{user.doctor.desc}}
+                                    </div>
+                                  </div>
+                                  <hr>
+                                  <div class="row">
+                                    <div class="col-sm-3">
+                                      <h6 class="mb-0">NMC number</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                     {{user.doctor.nmc_num}}
+                                    </div>
+                                  </div>
+                                  <hr>
+                                 <div class="row">
+                                    <div class="col-sm-3">
+                                      <h6 class="mb-0">Qualification</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                      {{user.doctor.qualification}}
+                                    </div>
+                                  </div>
+                                  <hr>
+                                 <div class="row">
+                                    <div class="col-sm-3">
+                                      <h6 class="mb-0">Speciality</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                      {{user.doctor.speciality}}
+                                    </div>
+                                  </div>
+                                  <hr>
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                      <h6 class="mb-0">Fee</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                      {{user.doctor.fee}}
+                                    </div>
+                                  </div>
+                                  <hr>
+                                  <div class="row">
+                                    <div class="col-sm-3">
+                                      <h6 class="mb-0">Phone</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                      {{user.doctor.phone}}
+                                    </div>
+                                  </div>
+                                  <hr>
+                                  <div class="row mb-2">
+                                    <div class="col-sm-3">
+                                      <h6 class="mb-0">Location</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                      {{user.doctor.location}}
+                                    </div>
+                                  </div>
                                 </div>
                             </div>
-
-
-
-                                    <p>{{user.doctor.nmc_num}}</p>
-                                    <p>{{user.doctor.speciality}}</p>
-                                    <p>{{user.doctor.location}}</p>
-                                    <p>{{user.doctor.fee}}</p>
-                                    <p>{{user.doctor.desc}}</p>
-                                    <p>{{user.doctor.phone}}</p>
-                                    <p>{{user.doctor.qualification}}</p>
-
-
-
-
-                          </div>
                         </div>
-           </div>
+                        </div>
+                    </div>
+           </div>s
 </body>
 {% endblock content %}
 </html>
