--- a/users/templates/users/patientlogin.html
+++ b/users/templates/users/patientlogin.html
@@ -12,6 +12,11 @@
 </head>
 <body>
     <style>
+      body{
+            background-image: url('/static/images/service-bg.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
         .main {
             background-color: #FFFFFF;
             width: 600px;
@@ -54,7 +59,14 @@
         }
     </style>
   <div class="main">
-    <p class="sign" align="center">Sign In</p>
+    <p class="sign" align="center">Sign In As Patient</p>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{message.tags}}">
+            {{ message }}
+            </div>
+        {% endfor%}
+        {% endif %}
     <form class="form1" method="POST">
       {% csrf_token %}
 
