--- a/users/templates/users/patientregister.html
+++ b/users/templates/users/patientregister.html
@@ -130,7 +130,7 @@
         }
     </style>
       <div class="main">
-        <p class="sign" align="center">Sign Up</p>
+        <p class="sign" align="center">Sign Up As Patient</p>
         <form class="form1"  method="POST" enctype="multipart/form-data">
           {%csrf_token%}
         {{ form | crispy }}
