--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                     <a class="nav-link" href="{% url 'feedback' %}">FEEDBACK</a>
                     </li>
+                      <li class="nav-item">
+                    <a class="nav-link" href="{% url 'bookappointment' %}">APPOINTMENT</a>
+                    </li>
                     <li class="nav-item">
                       <a class="nav-link" href="/profile">PROFILE</a>
                     </li>
@@ -70,74 +73,96 @@
                 </div>
             </nav>
            </section>
-           <style>
-                body{
+ <style>
+           .profile-container .profile-header .profile-info {
+                min-height: 175px;
+                border-right: 1px solid #eee;
+                padding: 15px 40px 35px 0;
+           }
+           .profile-container .profile-header .header-avatar {
+                width: 125px;
+                height: 125px;
+                -webkit-border-radius: 50%;
+                -webkit-background-clip: padding-box;
+                border-radius: 50%;
+                background-clip: padding-box;
+                border: 5px solid #0060b1;
+                box-shadow: 0 0 10px rgba(0,0,0,.15);
+                margin: 25px auto;
+                background-color: #fbfbfb;
+           }
+           .profile-container .profile-header {
+                min-height: 175px;
+                margin: 15px 15px 0;
+                box-shadow: 0 1px 2px rgba(0,0,0);
+           }
+           body{
                   background: #FFFFFF;
-                }
-                label{
-                    font-size: 18px;
-                    font-weight: 600;
-                }
-                input{
+           }
+           h6{
+                  font-weight: 600;
+           }
+
+           input{
                     margin-bottom: 0.5rem;
                     padding: 0px 6px;
-                    width: 30%;
+                    width: 60%;
                     height: 32px;
-                }
-
-               .updatebutton{
+           }
+           label{
+                    font-size: 18px;
+                    font-weight: 600;
+           }
+           .updatebutton{
                   background: linear-gradient(to right,#2895f1,#0060b1);
                   color: white;
-                  font-weight: 600;
-                  border-radius: 0.6em;
+                  border-radius: 0.3em;
                   border: none;
-                  padding: 10px 40px;
-                  font-size: 20px;
-                  margin-bottom: 20px;
-                  margin-left: 8px;
+                  padding: 8px 35px;
                   text-decoration: none;
                   outline: none !important;
-               }
-               #updatebutton:hover{
-                      font-size: 21px;
-               }
-               .media{
-               align-items: center;
-               }
-               .account-img{
-                      outline: #0060b1;
-               }
-               .media-body{
-                      display: inline-block;
-                      margin: 30px 0px 0px 28px;
-               }
+           }
+           #updatebutton:hover{
+                      font-size: 17px;
+           }
+
            </style>
            <div class="container">
                <h1 class="title text-center">Personal Information</h1>
-                        <div class="row">
-                          <div class="col-12">
-                            <div class="media mb-4">
-                                <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-                                <div class="media-body mb-4">
-                                    <h2 class="account-heading">{{ user.username }}</h2>
-                                    <p class="text-secondary">{{user.email}}</p>
+               <div class="col-md-12">
+                <div class="profile-container">
+                    <div class="profile-header row">
+                        <div class="col-md-4 col-sm-12 text-center">
+                            <img src="{{ user.profile.image.url }}" alt="user-profilePicture" class="header-avatar">
+                            <div class="mt-1 mb-2">
+                                <h4>{{ user.username }}</h4>
+                            </div>
+                        </div>
+                        <div class="col-md-8 col-sm-12 profile-info">
+                            <div class="header-information mt-3">
+                                <div class="row">
+                                    <form method ="POST" enctype="multipart/form-data">
+                                        {% csrf_token%}
+                                        <fieldset class="form-group ml-5">
+                                            {{ p_form | crispy }}
+                                        </fieldset>
+                                        <div class="form-group ml-5">
+                                            <button class="updatebutton" type="submit">Upload</button>
+                                        </div>
+                                    </form>
+                                    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{message.tags}}">
+            {{ message }}
+            </div>
+        {% endfor%}
+        {% endif %}
                                 </div>
                             </div>
-                            <form method ="POST" enctype="multipart/form-data">
-                                {% csrf_token%}
-                                <fieldset class="form-group">
-
-                                    {{ u_form | crispy }}
-                                    {{ z_form | crispy }}
-                                    {{ p_form | crispy }}
-
-                                </fieldset>
-                                <div class="form-group">
-                                    <button class="updatebutton" type="submit">Update</button>
-                                </div>
-                            </form>
-                          </div>
                         </div>
+                    </div>
+                </div>
+               </div>
            </div>
 </body>
 {% endblock content %}
